feat(device) detect brand LG models: G5 (LG-F700S), X Charge (LG-M327), Stylo 3 (LG-M430), K7 (LG-X210), X Style (LG-K200), V20 (LG-H990), V30 (LG-H930RE)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9717,7 +9717,7 @@ LG:
       model: 'G4s'
     - regex: 'LG-H735'
       model: 'G4 Beat'
-    - regex: 'LG-H8(?:20|3[01]|5[08]|6[08])|VS987|RS988'
+    - regex: 'LG-H8(?:20|3[01]|5[08]|6[08])|VS987|RS988|LG-F700S'
       model: 'G5'
     - regex: 'LG-H84[05]'
       model: 'G5 SE'
@@ -9767,7 +9767,7 @@ LG:
       model: 'PRADA phone L-02D'
     - regex: 'L-07C'
       model: 'Optimus Bright L-07C'
-    - regex: '(?:LG-)?F800(?:S|K|L)?'
+    - regex: '(?:LG-)?(?:F800[SKL]?|H990)'
       model: 'V20'
     - regex: 'LM-Q710(?:\(FGN\)|[\.]?FGN)'
       model: 'Q Stylus Plus'
@@ -9797,7 +9797,7 @@ LG:
       model: 'Style 3'
     - regex: 'LG-?(?:MS631)(?:[);/ ]|$)'
       model: 'G Stylo'
-    - regex: 'LG-?(?:LS777|L84VL)(?:[);/ ]|$)'
+    - regex: 'LG-?(?:LS777|L84VL|M430)(?:[);/ ]|$)'
       model: 'Stylo 3'
     - regex: 'LM-Q710|LML713DL|LG-Q710AL'
       model: 'Stylo 4'
@@ -9821,8 +9821,10 @@ LG:
       model: 'X2'
     - regex: 'LG-K580'
       model: 'X Cam'
-    - regex: 'LG-SP320'
+    - regex: 'LG-(?:SP320|M327)'
       model: 'X Charge'
+    - regex: 'LG-K200'
+      model: 'X Style'
     - regex: 'LM-X510WM'
       model: 'X Power 3'
     - regex: 'LM-X(?:41[05]K|410S)'
@@ -9907,7 +9909,7 @@ LG:
       model: 'V20'
     - regex: '(?:LG-)?US999'
       model: 'V20'
-    - regex: '(?:VS996|LG-(?:H933|H93[012]|H932PR|[LU]S998|AS998)|LGM-V300[KLS])(?:[);/ ]|$)'
+    - regex: '(?:VS996|LG-(?:H933|H93[012]|H930RE|H932PR|[LU]S998|AS998)|LGM-V300[KLS])(?:[);/ ]|$)'
       model: 'V30'
     - regex: 'L-01J(?:[);/ ]|$)'
       model: 'V20 Pro'
@@ -9931,7 +9933,7 @@ LG:
       model: 'Optimus Zone 3'
     - regex: '(?:LG-)?K100'
       model: 'K3'
-    - regex: '(?:LG-?)?(?:K|MS)33[02]'
+    - regex: '(?:LG-?)?(?:K|MS)33[02]|LG-X210'
       model: 'K7'
     - regex: '(?:LG-?)?(?:K|MS)350'
       model: 'K8'
