feat(device) detect brand LG models: V30 Plus (LG-H930DS), G6 (LG-US997), Bello 2 (LG-X155), Bello 2 (LG-X165g), Prime Plus 4G (LG-H522)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9721,7 +9721,7 @@ LG:
       model: 'G5'
     - regex: 'LG-H84[05]'
       model: 'G5 SE'
-    - regex: 'VS988|LG-H87(?:0(?:DS)?|[23])|LGUS997|LGM-G600S'
+    - regex: 'VS988|LG-H87(?:0(?:DS)?|[23])|LG-?US997|LGM-G600S'
       model: 'G6'
     - regex: 'LM-Q850'
       model: 'G7 Fit'
@@ -9743,7 +9743,7 @@ LG:
       model: 'K20'
     - regex: '(?:LG-)?H50[02]'
       model: 'Magna'
-    - regex: 'LG-X150'
+    - regex: 'LG-(?:X15[05]|X165g)'
       model: 'Bello 2'
     - regex: 'LG-D335'
       model: 'L Bello'
@@ -9837,6 +9837,8 @@ LG:
       model: 'K30'
     - regex: 'LMX130IM'
       model: 'W10'
+    - regex: 'LG-H522'
+      model: 'Prime Plus 4G'
     - regex: 'LGL58VL'
       model: 'Rabel 2'
     - regex: 'LM-X410'
@@ -9913,7 +9915,7 @@ LG:
       model: 'V30'
     - regex: 'L-01J(?:[);/ ]|$)'
       model: 'V20 Pro'
-    - regex: '(?:L-01K|LGV35)(?:[);/ ]|$)'
+    - regex: '(?:L-01K|LGV35|LG-H930DS)(?:[);/ ]|$)'
       model: 'V30 Plus'
     - regex: 'L-51A(?:[);/ ]|$)'
       model: 'V60'
