feat(device) detect brand LG models: V20 (LG-F800K), G5 (LG-F700K), G3 Cat. 6 (LG-F460), G4 (LG-H819, LGLS991, LGUS991, LGV32), G5 (LGLS992), X Screen (LG-K500), Ray (LG-X190), K3 2017 (LG-AS110), G Pro Lite (LG-D680)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9679,14 +9679,14 @@ LG:
       model: 'Disney Mobile DM-$1'
     - regex: 'LG-D325'
       model: 'L70'
-    - regex: 'LG-D405'
+    - regex: 'LG-D4[01]5'
       model: 'L90'
     - regex: 'LG-D340F8'
       model: 'L70 Tri'
     - regex: 'LG-X145'
       model: 'L60'
-    - regex: 'LG-D415'
-      model: 'L90'
+    - regex: 'LG-D285'
+      model: 'L65'
     - regex: 'LM-X210APM'
       model: 'Phoenix 4'
     - regex: 'LG-P505R'
@@ -9705,9 +9705,11 @@ LG:
       model: 'G3'
     - regex: 'LG-D72[23568]'
       model: 'G3 Beat'
+    - regex: 'LG-F460'
+      model: 'G3 Cat. 6'
     - regex: 'LG-D724'
       model: 'G3s'
-    - regex: 'LG-H81[158]'
+    - regex: 'LG-H81[1589]|LG-?[LU]S991|LGV32'
       model: 'G4'
     - regex: 'LG-H525n?'
       model: 'G4c'
@@ -9717,7 +9719,7 @@ LG:
       model: 'G4s'
     - regex: 'LG-H735'
       model: 'G4 Beat'
-    - regex: 'LG-H8(?:20|3[01]|5[08]|6[08])|VS987|RS988|LG-F700S'
+    - regex: 'LG-H8(?:20|3[01]|5[08]|6[08])|VS987|RS988|LG-F700[SK]|LG-?LS992'
       model: 'G5'
     - regex: 'LG-H84[05]'
       model: 'G5 SE'
@@ -9729,6 +9731,8 @@ LG:
       model: 'G7 One'
     - regex: 'LGL23(?:[);/ ]|$)'
       model: 'G Flex'
+    - regex: 'LG-D680'
+      model: 'G Pro Lite'
     - regex: 'LM-G820(N|QM[0127]|UMB)?'
       model: 'G8'
     - regex: 'LM-G850'
@@ -9825,6 +9829,8 @@ LG:
       model: 'X Charge'
     - regex: 'LG-K200'
       model: 'X Style'
+    - regex: 'LG-K500'
+      model: 'X Screen'
     - regex: 'LM-X510WM'
       model: 'X Power 3'
     - regex: 'LM-X(?:41[05]K|410S)'
@@ -9841,6 +9847,8 @@ LG:
       model: 'Prime Plus 4G'
     - regex: 'LGL58VL'
       model: 'Rabel 2'
+    - regex: 'LG-X190'
+      model: 'Ray'
     - regex: 'LM-X410'
       model: 'LM-X410'
     - regex: 'LGM-K121S'
@@ -9901,15 +9909,7 @@ LG:
       model: 'K8 V'
     - regex: 'LM-X212\(G\)'
       model: 'K8 (2018)'
-    - regex: '(?:LG-)?H91[058]'
-      model: 'V20'
-    - regex: '(?:LG-)?H990(?:DS|N|T)?'
-      model: 'V20'
-    - regex: '(?:LG-)?LS997'
-      model: 'V20'
-    - regex: '(?:LG-)?VS995'
-      model: 'V20'
-    - regex: '(?:LG-)?US999'
+    - regex: '(?:LG-)?(?:VS995|F800K|US999|LS997|H91[058]|H990(?:DS|[NT])?)'
       model: 'V20'
     - regex: '(?:VS996|LG-(?:H933|H93[012]|H930RE|H932PR|[LU]S998|AS998)|LGM-V300[KLS])(?:[);/ ]|$)'
       model: 'V30'
@@ -9935,6 +9935,8 @@ LG:
       model: 'Optimus Zone 3'
     - regex: '(?:LG-)?K100'
       model: 'K3'
+    - regex: 'LG-AS110'
+      model: 'K3 (2017)'
     - regex: '(?:LG-?)?(?:K|MS)33[02]|LG-X210'
       model: 'K7'
     - regex: '(?:LG-?)?(?:K|MS)350'
