feat(device) detect brand LG models: Aristo 2 (LM-X210), X300 (LGM-K120L, LGM-K120S, LGM-K120K),  Q6 (LGM-X600S, LGM-X600L, LGM-X600K), it (LGV36), Stylo 4 (LG-Q710PL)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9757,6 +9757,8 @@ LG:
       model: 'Zero'
     - regex: '(?:LG-)?M154'
       model: 'Risio 2'
+    - regex: 'LGM-K120[LSK]'
+      model: 'X300'
     - regex: '(?:LG-)?P500H'
       model: 'Optimus One'
     - regex: '(L-05[DE])(?:[);/ ]|$)'
@@ -9803,7 +9805,7 @@ LG:
       model: 'G Stylo'
     - regex: 'LG-?(?:LS777|L84VL|M430)(?:[);/ ]|$)'
       model: 'Stylo 3'
-    - regex: 'LM-Q710|LML713DL|LG-Q710AL'
+    - regex: 'LM-Q710|LML713DL|LG-Q710[AP]L'
       model: 'Stylo 4'
     - regex: '(?:LM-Q720|LGL722DL)(?:[);/ ]|$)'
       model: 'Stylo 5'
@@ -9969,10 +9971,12 @@ LG:
       model: 'Q51'
     - regex: 'LM-Q630N?(?:[);/ ]|$)'
       model: 'Q61'
-    - regex: '(?:LG-)?M700(?:N|A|DSK|AN)?'
+    - regex: '(?:LG-)?M700(?:N|A|DSK|AN)?|LGM-X600[SLK]|LG-US700'
       model: 'Q6'
     - regex: 'LM-X440IM'
       model: 'W30'
+    - regex: 'LGV36(?:[);/ ]|$)'
+      model: 'it'
     - regex: '(?:LG-?)?K220'
       model: 'X Power'
     - regex: '(?:LG-?)?M320'
