--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9677,9 +9677,11 @@ LG:
   models:
     - regex: 'DM-(01K|02H)'
       model: 'Disney Mobile DM-$1'
-    - regex: 'LG-D325'
+    - regex: 'LG-D32[05]'
       model: 'L70'
-    - regex: 'LG-D4[01]5'
+    - regex: 'LG-D315'
+      model: 'F70'
+    - regex: 'LG-D4(?:[01]5|10)'
       model: 'L90'
     - regex: 'LG-D340F8'
       model: 'L70 Tri'
@@ -9723,7 +9725,7 @@ LG:
       model: 'G5'
     - regex: 'LG-H84[05]'
       model: 'G5 SE'
-    - regex: 'VS988|LG-H87(?:0(?:DS)?|[23])|LG-?US997|LGM-G600S'
+    - regex: 'VS988|LG-H87(?:[01](?:DS|S)?|[23])|LG-?US997|LGM-G600S'
       model: 'G6'
     - regex: 'LM-Q850'
       model: 'G7 Fit'
@@ -9751,6 +9753,8 @@ LG:
       model: 'Bello 2'
     - regex: 'LG-D335'
       model: 'L Bello'
+    - regex: 'LG-D29[05]'
+      model: 'L Fino'
     - regex: '(?:LG-)?H343'
       model: 'Risio'
     - regex: '(?:LG-)?H650'
@@ -9787,7 +9791,7 @@ LG:
       model: 'Q7+'
     - regex: 'LM-Q815[SL](?:[);/ ]|$)'
       model: 'Q8+'
-    - regex: 'LM-Q925L(?:[);/ ]|$)'
+    - regex: 'LM-Q925[LK](?:[);/ ]|$)'
       model: 'Q9'
     - regex: 'LM-(?:Q730N|Q620)(?:[);/ ]|$)'
       model: 'Q70'
@@ -9799,6 +9803,8 @@ LG:
       model: 'Style 2'
     - regex: 'VS835(?:[);/ ]|$)'
       model: 'Stylo 2 V'
+    - regex: 'LGMS550'
+      model: 'Stylo 2 Plus'
     - regex: 'L-41A(?:[);/ ]|$)'
       model: 'Style 3'
     - regex: 'LG-?(?:MS631)(?:[);/ ]|$)'
@@ -9829,10 +9835,12 @@ LG:
       model: 'X Cam'
     - regex: 'LG-(?:SP320|M327)'
       model: 'X Charge'
-    - regex: 'LG-K200'
+    - regex: 'LG-K200|LGLS676'
       model: 'X Style'
     - regex: 'LG-K500'
       model: 'X Screen'
+    - regex: 'LG-M710'
+      model: 'X Venture'
     - regex: 'LM-X510WM'
       model: 'X Power 3'
     - regex: 'LM-X(?:41[05]K|410S)'
@@ -9945,14 +9953,10 @@ LG:
       model: 'K8'
     - regex: 'VS500PP'
       model: 'K8 V'
-    - regex: '(?:LG-)?K420(?:N)?'
-      model: 'K10'
-    - regex: '(?:LG-)?K430(?:DS|DSF|DSY)?'
+    - regex: '(?:LG-)?(?:K420(?:N)?|F670[KLS]?|K430(?:DS|DSF|DSY)?|K410)'
       model: 'K10'
     - regex: '(?:LG-)?M250N?'
       model: 'K10 (2017)'
-    - regex: '(?:LG-)?F670[KLS]?'
-      model: 'K10'
     - regex: '(?:LG-)?M255'
       model: 'K20'
     - regex: '(?:LG-?)?[MT]P260'
