feat(device) detect brand LG models: G6 (LGM-G600L, LG-AS993, LG-H870AR, LG-H870I),  G7 ThinQ (LG-G710), Premier Pro (LM-X410.FG), K8s (LM-X220QMA), Fortune 2 (LM-X210CMR),  Q9 (LM-Q925S), G4 (LG-F500L, LG-H810, LG-F500S, LG-F500K), G5 (LG-F700L, LG-H830),  V20 (LG-F800L), L80 (LG-D373)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9683,6 +9683,8 @@ LG:
       model: 'F70'
     - regex: 'LG-D4(?:[01]5|10)'
       model: 'L90'
+    - regex: 'LG-D373'
+      model: 'L80'
     - regex: 'LG-D340F8'
       model: 'L70 Tri'
     - regex: 'LG-X145'
@@ -9711,7 +9713,7 @@ LG:
       model: 'G3 Cat. 6'
     - regex: 'LG-D724'
       model: 'G3s'
-    - regex: 'LG-H81[1589]|LG-?[LU]S991|LGV32'
+    - regex: 'LG-H81[01589]|LG-?[LU]S991|LGV32|LG-F500[LSK]'
       model: 'G4'
     - regex: 'LG-H525n?'
       model: 'G4c'
@@ -9721,11 +9723,11 @@ LG:
       model: 'G4s'
     - regex: 'LG-H735'
       model: 'G4 Beat'
-    - regex: 'LG-H8(?:20|3[01]|5[08]|6[08])|VS987|RS988|LG-F700[SK]|LG-?LS992'
+    - regex: 'LG-H8(?:20|3[01]|5[08]|6[08])|VS987|RS988|LG-F700[SKL]|LG-?LS992'
       model: 'G5'
     - regex: 'LG-H84[05]'
       model: 'G5 SE'
-    - regex: 'VS988|LG-H87(?:[01](?:DS|S)?|[23])|LG-?US997|LGM-G600S'
+    - regex: 'VS988|LG-H87(?:[01](?:DS|[SI]|AR)?|[23])|LG-?US997|LGM-G600[SL]|LG-AS993'
       model: 'G6'
     - regex: 'LM-Q850'
       model: 'G7 Fit'
@@ -9791,7 +9793,7 @@ LG:
       model: 'Q7+'
     - regex: 'LM-Q815[SL](?:[);/ ]|$)'
       model: 'Q8+'
-    - regex: 'LM-Q925[LK](?:[);/ ]|$)'
+    - regex: 'LM-Q925[LKS](?:[);/ ]|$)'
       model: 'Q9'
     - regex: 'LM-(?:Q730N|Q620)(?:[);/ ]|$)'
       model: 'Q70'
@@ -9817,11 +9819,11 @@ LG:
       model: 'Stylo 5'
     - regex: 'LM-Q730(?:[);/ ]|$)'
       model: 'Stylo 6'
-    - regex: 'LM-G710(N|VM)?'
+    - regex: 'LM-G710(N|VM)?|LG-G710'
       model: 'G7 ThinQ'
     - regex: 'LM-X210CM'
       model: 'Fortune 2'
-    - regex: 'LM-X410\.F(?:[);/ ]|$)'
+    - regex: 'LM-X410\.FG?(?:[);/ ]|$)'
       model: 'Premier Pro'
     - regex: 'LGL455DL(?:[);/ ]|$)'
       model: 'Premier Pro Plus'
@@ -9897,7 +9899,7 @@ LG:
       model: 'Aristo'
     - regex: 'LM-X210[G]?'
       model: 'Aristo 2'
-    - regex: 'LM-X220'
+    - regex: 'LM-X220(?:[);/ ]|$)'
       model: 'Aristo 3'
     - regex: 'LM-V40(?:5|9N)?(?:[);/ ]|$)'
       model: 'V40 ThinQ'
@@ -9913,6 +9915,8 @@ LG:
       model: 'V10'
     - regex: 'LG-(?:X240|M200)'
       model: 'K8 (2017)'
+    - regex: 'LM-X220QMA'
+      model: 'K8s'
     - regex: '(?:LG-)?RS500'
       model: 'K8 4G'
     - regex: '(?:LG-)?VS500'
