Detect new brand: AG Mobile and Detect devices for existing brands: Google, Pioneer, Sony, Ross&Moor, Nomi, Motorola, Prestigio, Jinga, UNIWA, Lenovo, LG, LeEco, Xiaomi, Hotwav, Panasonic, Bluboo, Meizu, UMIDIGI, Highscreen, Gooweel. Asus, BenQ, Doogee, Explay and Detect app: Google Fiber TV (#6799)
* feat(app) detect app: Google Fiber TV
feat(device) detect brand Google models: Fiber GFHD100, Fiber GFHD200
feat(device) detect brand Pioneer model: Fiber BDP-160
feat(device) detect brand Sony model: NSZ-GS7
feat(os) detect Cinnamon defined as GNU/Linux

* feat(test) add tests: Bluboo Maya Max, Hisense L675, Vertex Impress Game, Inoi 5i, Hisense Infinity H12, Vertex Impress Luck
feat(device) rename Nomi C07008 to Nomi Sigma
feat(device) detect brand Ross&Moor models: RMD-550
feat(device) detect brand Nomi models: Ultra 3 Pro (C101040)
feat(device) detect brand Motorola models: Moto G5s Plus
feat(device) detect brand Prestigio models: Wize R3 (PSP3423DUO)
feat(device) detect brand Jinga models: Hit 4G
feat(device) detect brand UNIWA models: F40
feat(device) detect brand Lenovo models: Yoga Smart Tab (YT-X705L, YT-X705F), Tab M7 (TB-7305I)

* feat(device) detect brand LeEco model: Le Max 2 (LEX820)
feat(device) detect brand Xiaomi model: Mi Note 10 Lite
feat(device) detect brand Hotwav models: Symbol R60, Symbol X, Symbol Max
feat(device) detect brand LG model: G4 (LG-H812)
feat(device) detect brand Panasonic model: Eluga I7

* feat(device) detect brand Bluboo model: Picasso 4G
feat(device) detect brand Meizu model: PRO 5
feat(device) detect brand UMIDIGI model: S2 Lite
feat(device) detect brand Highscreen model: Prime L
feat(device) detect brand Jinga model: Basco M500 3G
feat(device) detect brand Gooweel model: M5 Pro

* feat(device) detect new brand AG Mobile models: Hashtag, Shine, Chacer
feat(device) detect brand Asus models: Fonepad 7 (K01N, K019), MeMO Pad 7 (K017), MeMO Pad 8 (K015)
feat(device) detect brand BenQ model: F5
feat(de

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -592,3 +592,7 @@
 - regex: 'Vuhuv/([\d\.]+)'
   name: 'Vuhuv'
   version: '$1'
+
+- regex: '.+/(?:gfibertv|gftv200)-([\d]+)-'
+  name: 'Google Fiber TV'
+  version: '$1'
