--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -1981,3 +1981,71 @@
     model: 43LF421U19
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Opera/9.80 (Linux armv6l; Opera TV Store/5581) Presto/2.12.362 Version/12.11  Blu-ray Player/v00.17 (Pioneer, BDP-160, wired)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    version: "12.11"
+    engine: Presto
+    engine_version: 2.12.362
+  device:
+    type: tv
+    brand: Pioneer
+    model: BDP-160
+  os_family: GNU/Linux
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; GoogleTV 3.2; NSZ-GS7/GX70 Build/MASTER) AppleWebKit/534.24 (KHTML, like Gecko) Chrome/11.0.696.77 Safari/534.24
+  os:
+    name: Google TV
+    version: "3.2"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 11.0.696.77
+    engine: WebKit
+    engine_version: "534.24"
+  device:
+    type: tv
+    brand: Sony
+    model: NSZ-GS7
+  os_family: Google TV
+  browser_family: Chrome
+-
+  user_agent: Cinnamon/1.0.0.1, GFHD100/gfibertv-43-pre0-499238-g2b2e445 (Google Fiber, GFHD100, wired) CrKey/1.13.20150302.125330
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ""
+  client:
+    type: mobile app
+    name: Google Fiber TV
+    version: "43"
+  device:
+    type: tv
+    brand: Google
+    model: Fiber GFHD100
+  os_family: GNU/Linux
+  browser_family: Unknown
+-
+  user_agent: Cinnamon/1.0.0.0, GFHD200/gftv200-42-pre0-140-gf65a138-sm (Google Fiber, GFHD200, wired)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ""
+  client:
+    type: mobile app
+    name: Google Fiber TV
+    version: "42"
+  device:
+    type: tv
+    brand: Google
+    model: Fiber GFHD200
+  os_family: GNU/Linux
+  browser_family: Unknown
