Detect devices for brand LG (#6801)
* feat(device) detect brand LG models: Bello 2 (LG-X150), L60 (LG-X145),
 Wine Smart H410 (LG-H410), L Bello (LG-D335), LG-Q710AL (Stylo 4),
 K30 (LGL322DL), Stylus 3 (LG-M400)

feat(test) add tests: LG V50 ThinQ (LM-V500N)

* feat(device) detect brand LG models: LG-D415 (L90), G Pad 5 10.1" FHD (LM-T605),
 G6 (LGM-G600S, (LG-H870), K51 (LGL555DL), V10 (LG-H900), L90 (LG-D415), Q70 (LM-Q620)
 Magna (LG-H500), Velvet 5G (LM-G900TM), Spirit (LG-H440AR, LG-H440, LG-H420)

* feat(device) detect brand LG models: G5 (LG-F700S), X Charge (LG-M327), Stylo 3 (LG-M430), K7 (LG-X210), X Style (LG-K200), V20 (LG-H990), V30 (LG-H930RE)

* feat(device) detect brand LG models: V30 Plus (LG-H930DS), G6 (LG-US997), Bello 2 (LG-X155), Bello 2 (LG-X165g), Prime Plus 4G (LG-H522)

* feat(device) detect brand LG models: V20 (LG-F800K), G5 (LG-F700K), G3 Cat. 6 (LG-F460), G4 (LG-H819, LGLS991, LGUS991, LGV32), G5 (LGLS992), X Screen (LG-K500), Ray (LG-X190), K3 2017 (LG-AS110), G Pro Lite (LG-D680)

* feat(device) detect brand LG models: Aristo 2 (LM-X210), X300 (LGM-K120L, LGM-K120S, LGM-K120K),
 Q6 (LGM-X600S, LGM-X600L, LGM-X600K), it (LGV36), Stylo 4 (LG-Q710PL)

* feat(device) detect brand LG models: Q9 (LM-Q925K), G6 (LG-H871, LG-H870S) G5 SE (LG-H845), S Style (LGLS676), K10 (LG-F670S, LG-K410), X Venture (LG-M710), Stylo 2 Plus (LGMS550), L90 (LG-D410), L Fino (LG-D290, LG-D295), l70 (LG-D320), F70 (LG-D315)

* feat(device) detect brand LG models: G6 (LGM-G600L, LG-AS993, LG-H870AR, LG-H870I),
 G7 ThinQ (LG-G710), Premier Pro (LM-X410.FG), K8s (LM-X220QMA), Fortune 2 (LM-X210CMR),
 Q9 (LM-Q925S), G4 (LG-F500L, LG-H810, LG-F500S, LG-F500K), G5 (LG-F700L, LG-H830),
 V20 (LG-F800L), L80 (LG-D373)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9698,12 +9698,20 @@ LG:
   models:
     - regex: 'DM-(01K|02H)'
       model: 'Disney Mobile DM-$1'
-    - regex: 'LG-D325'
+    - regex: 'LG-D32[05]'
       model: 'L70'
-    - regex: 'LG-D405'
+    - regex: 'LG-D315'
+      model: 'F70'
+    - regex: 'LG-D4(?:[01]5|10)'
       model: 'L90'
+    - regex: 'LG-D373'
+      model: 'L80'
     - regex: 'LG-D340F8'
       model: 'L70 Tri'
+    - regex: 'LG-X145'
+      model: 'L60'
+    - regex: 'LG-D285'
+      model: 'L65'
     - regex: 'LM-X210APM'
       model: 'Phoenix 4'
     - regex: 'LG-P505R'
@@ -9722,9 +9730,11 @@ LG:
       model: 'G3'
     - regex: 'LG-D72[23568]'
       model: 'G3 Beat'
+    - regex: 'LG-F460'
+      model: 'G3 Cat. 6'
     - regex: 'LG-D724'
       model: 'G3s'
-    - regex: 'LG-H81[1258]'
+    - regex: 'LG-H81[012589]|LG-?[LU]S991|LGV32|LG-F500[LSK]'
       model: 'G4'
     - regex: 'LG-H525n?'
       model: 'G4c'
@@ -9734,11 +9744,11 @@ LG:
       model: 'G4s'
     - regex: 'LG-H735'
       model: 'G4 Beat'
-    - regex: 'LG-H8(?:20|3[01]|5[08]|6[08])|VS987|RS988'
+    - regex: 'LG-H8(?:20|3[01]|5[08]|6[08])|VS987|RS988|LG-F700[SKL]|LG-?LS992'
       model: 'G5'
     - regex: 'LG-H84[05]'
       model: 'G5 SE'
-    - regex: 'VS988|LG-H87(?:0DS|[23])|LGUS997'
+    - regex: 'VS988|LG-H87(?:[01](?:DS|[SI]|AR)?|[23])|LG-?US997|LGM-G600[SL]|LG-AS993'
       model: 'G6'
     - regex: 'LM-Q850'
       model: 'G7 Fit'
@@ -9746,6 +9756,8 @@ LG:
       model: 'G7 One'
     - regex: 'LGL23(?:[);/ ]|$)'
       model: 'G Flex'
+    - regex: 'LG-D680'
+      model: 'G Pro Lite'
     - regex: 'LM-G820(N|QM[0127]|UMB)?'
       model: 'G8'
     - regex: 'LM-G850'
@@ -9754,16 +9766,26 @@ LG:
       model: 'G8S ThinQ'
     - regex: '901LG(?:[);/ ]|$)'
       model: 'G8X ThinQ'
+    - regex: 'LG-H410(?:[);/ ]|$)'
+      model: 'Wine Smart H410'
     - regex: 'VS501|LM-X120'
       model: 'K20'
-    - regex: '(?:LG-)?H502'
+    - regex: '(?:LG-)?H50[02]'
       model: 'Magna'
+    - regex: 'LG-(?:X15[05]|X165g)'
+      model: 'Bello 2'
+    - regex: 'LG-D335'
+      model: 'L Bello'
+    - regex: 'LG-D29[05]'
+      model: 'L Fino'
     - regex: '(?:LG-)?H343'
       model: 'Risio'
     - regex: '(?:LG-)?H650'
       model: 'Zero'
     - regex: '(?:LG-)?M154'
       model: 'Risio 2'
+    - regex: 'LGM-K120[LSK]'
+      model: 'X300'
     - regex: '(?:LG-)?P500H'
       model: 'Optimus One'
     - regex: '(L-05[DE])(?:[);/ ]|$)'
@@ -9778,12 +9800,14 @@ LG:
       model: 'PRADA phone L-02D'
     - regex: 'L-07C'
       model: 'Optimus Bright L-07C'
-    - regex: '(?:LG-)?F800(?:S|K|L)?|LG-US996'
+    - regex: '(?:LG-)?(?:F800[SKL]?|H990|US996)'
       model: 'V20'
     - regex: 'LM-Q710(?:\(FGN\)|[\.]?FGN)'
       model: 'Q Stylus Plus'
     - regex: '801LG'
       model: 'Q Stylus'
+    - regex: 'LG-M400'
+      model: 'Stylus 3'
     - regex: 'LG-K520'
       model: 'Stylus 2'
     - regex: 'LM-Q[67]10\.FG(?:[);/ ]|$)'
@@ -9792,9 +9816,9 @@ LG:
       model: 'Q7+'
     - regex: 'LM-Q815[SL](?:[);/ ]|$)'
       model: 'Q8+'
-    - regex: 'LM-Q925L(?:[);/ ]|$)'
+    - regex: 'LM-Q925[LKS](?:[);/ ]|$)'
       model: 'Q9'
-    - regex: 'LM-Q730N(?:[);/ ]|$)'
+    - regex: 'LM-(?:Q730N|Q620)(?:[);/ ]|$)'
       model: 'Q70'
     - regex: 'LGV33(?:[);/ ]|$)'
       model: 'Qua Phone PX'
@@ -9804,25 +9828,27 @@ LG:
       model: 'Style 2'
     - regex: 'VS835(?:[);/ ]|$)'
       model: 'Stylo 2 V'
+    - regex: 'LGMS550'
+      model: 'Stylo 2 Plus'
     - regex: 'L-41A(?:[);/ ]|$)'
       model: 'Style 3'
     - regex: 'LG-?(?:MS631)(?:[);/ ]|$)'
       model: 'G Stylo'
-    - regex: 'LG-?(?:LS777|L84VL)(?:[);/ ]|$)'
+    - regex: 'LG-?(?:LS777|L84VL|M430)(?:[);/ ]|$)'
       model: 'Stylo 3'
     - regex: 'LG-?(TP450)(?:[);/ ]|$)'
       model: 'Stylo 3 Plus'
-    - regex: 'LM-Q710|LML713DL'
+    - regex: 'LM-Q710|LML713DL|LG-Q710[AP]L'
       model: 'Stylo 4'
     - regex: '(?:LM-Q720|LGL722DL)(?:[);/ ]|$)'
       model: 'Stylo 5'
     - regex: 'LM-Q730(?:[);/ ]|$)'
       model: 'Stylo 6'
-    - regex: 'LM-G710(N|VM)?'
+    - regex: 'LM-G710(N|VM)?|LG-G710'
       model: 'G7 ThinQ'
     - regex: 'LM-X210CM'
       model: 'Fortune 2'
-    - regex: 'LM-X410\.F(?:[);/ ]|$)'
+    - regex: 'LM-X410\.FG?(?:[);/ ]|$)'
       model: 'Premier Pro'
     - regex: 'LGL455DL(?:[);/ ]|$)'
       model: 'Premier Pro Plus'
@@ -9836,8 +9862,14 @@ LG:
       model: 'X2'
     - regex: 'LG-K580'
       model: 'X Cam'
-    - regex: 'LG-SP320'
+    - regex: 'LG-(?:SP320|M327)'
       model: 'X Charge'
+    - regex: 'LG-K200|LGLS676'
+      model: 'X Style'
+    - regex: 'LG-K500'
+      model: 'X Screen'
+    - regex: 'LG-M710'
+      model: 'X Venture'
     - regex: 'LM-X510WM'
       model: 'X Power 3'
     - regex: 'LM-X(?:41[05]K|410S)'
@@ -9846,12 +9878,16 @@ LG:
       model: 'X4+'
     - regex: 'LM-X410(?:\.FN|\(FG\))'
       model: 'K11'
-    - regex: 'LM-X(?:320|410[UP]M)'
+    - regex: 'LM-X(?:320|410[UP]M)|LGL322DL'
       model: 'K30'
     - regex: 'LMX130IM'
       model: 'W10'
+    - regex: 'LG-H522'
+      model: 'Prime Plus 4G'
     - regex: 'LGL58VL'
       model: 'Rabel 2'
+    - regex: 'LG-X190'
+      model: 'Ray'
     - regex: 'LM-X410'
       model: 'LM-X410'
     - regex: 'LGM-K121S'
@@ -9890,7 +9926,7 @@ LG:
       model: 'Aristo'
     - regex: 'LM-X210[G]?'
       model: 'Aristo 2'
-    - regex: 'LM-X220'
+    - regex: 'LM-X220(?:[);/ ]|$)'
       model: 'Aristo 3'
     - regex: 'LM-V40(?:5|9N)?(?:[);/ ]|$)'
       model: 'V40 ThinQ'
@@ -9902,35 +9938,29 @@ LG:
       model: 'Q92'
     - regex: 'LM-Q927L'
       model: 'Q9 One'
-    - regex: '(?:LG-)?(?:RS987|H901|H96[0128]|VS990)'
+    - regex: '(?:LG-)?(?:RS987|H90[01]|H96[0128]|VS990)'
       model: 'V10'
     - regex: 'LG-(?:X240|M200)'
       model: 'K8 (2017)'
+    - regex: 'LM-X220QMA'
+      model: 'K8s'
     - regex: '(?:LG-)?RS500'
       model: 'K8 4G'
     - regex: '(?:LG-)?VS500'
       model: 'K8 V'
     - regex: 'LM-X212\(G\)'
       model: 'K8 (2018)'
-    - regex: '(?:LG-)?H91[058]'
+    - regex: '(?:LG-)?(?:VS995|F800K|US999|LS997|H91[058]|H990(?:DS|[NT])?)'
       model: 'V20'
-    - regex: '(?:LG-)?H990(?:DS|N|T)?'
-      model: 'V20'
-    - regex: '(?:LG-)?LS997'
-      model: 'V20'
-    - regex: '(?:LG-)?VS995'
-      model: 'V20'
-    - regex: '(?:LG-)?US999'
-      model: 'V20'
-    - regex: '(?:VS996|LG-(?:H933|H93[012]|H932PR|[LU]S998|AS998)|LGM-V300[KLS])(?:[);/ ]|$)'
+    - regex: '(?:VS996|LG-(?:H933|H93[012]|H930RE|H932PR|[LU]S998|AS998)|LGM-V300[KLS])(?:[);/ ]|$)'
       model: 'V30'
     - regex: 'L-01J(?:[);/ ]|$)'
       model: 'V20 Pro'
-    - regex: '(?:L-01K|LGV35)(?:[);/ ]|$)'
+    - regex: '(?:L-01K|LGV35|LG-H930DS)(?:[);/ ]|$)'
       model: 'V30 Plus'
     - regex: 'L-51A(?:[);/ ]|$)'
       model: 'V60'
-    - regex: '(?:L-52A|LM-G900N?)(?:[);/ ]|$)'
+    - regex: '(?:L-52A|LM-G900(?:N|TM)?)(?:[);/ ]|$)'
       model: 'Velvet 5G'
     - regex: '(?:LM-G910)(?:[);/ ]|$)'
       model: 'Velvet 4G'
@@ -9946,20 +9976,18 @@ LG:
       model: 'Optimus Zone 3'
     - regex: '(?:LG-)?K100'
       model: 'K3'
-    - regex: '(?:LG-?)?(?:K|MS)33[02]'
+    - regex: 'LG-AS110'
+      model: 'K3 (2017)'
+    - regex: '(?:LG-?)?(?:K|MS)33[02]|LG-X210'
       model: 'K7'
     - regex: '(?:LG-?)?(?:K|MS)350'
       model: 'K8'
     - regex: 'VS500PP'
       model: 'K8 V'
-    - regex: '(?:LG-)?K420(?:N)?'
-      model: 'K10'
-    - regex: '(?:LG-)?K430(?:DS|DSF|DSY)?'
+    - regex: '(?:LG-)?(?:K420(?:N)?|F670[KLS]?|K430(?:DS|DSF|DSY)?|K410)'
       model: 'K10'
     - regex: '(?:LG-)?M250N?'
       model: 'K10 (2017)'
-    - regex: '(?:LG-)?F670[KLS]?'
-      model: 'K10'
     - regex: '(?:LG-)?M255'
       model: 'K20'
     - regex: '(?:LG-?)?[MT]P260'
@@ -9970,7 +9998,7 @@ LG:
       model: 'K31'
     - regex: 'LM-K420(?:[);/ ]|$)'
       model: 'K42'
-    - regex: 'LM-K500(?:[);/ ]|$)'
+    - regex: '(?:LM-K500|LGL555DL)(?:[);/ ]|$)'
       model: 'K51'
     - regex: 'LM-K510(?:[);/ ]|$)'
       model: 'K51S'
@@ -9980,10 +10008,12 @@ LG:
       model: 'Q51'
     - regex: 'LM-Q630N?(?:[);/ ]|$)'
       model: 'Q61'
-    - regex: '(?:LG-)?M700(?:N|A|DSK|AN)?'
+    - regex: '(?:LG-)?M700(?:N|A|DSK|AN)?|LGM-X600[SLK]|LG-US700'
       model: 'Q6'
     - regex: 'LM-X440IM'
       model: 'W30'
+    - regex: 'LGV36(?:[);/ ]|$)'
+      model: 'it'
     - regex: '(?:LG-?)?K220'
       model: 'X Power'
     - regex: '(?:LG-?)?M320'
@@ -10000,7 +10030,7 @@ LG:
       model: 'Leon'
     - regex: '(?:LG-)?H342|LGMS345'
       model: 'Leon 4G LTE'
-    - regex: '(?:LG-)?H4(?:40|22)'
+    - regex: '(?:LG-)?H4(?:40|2[02])'
       model: 'Spirit'
     - regex: '(?:LG)?C660'
       model: 'Optimus Pro'
@@ -10022,6 +10052,9 @@ LG:
       device: 'phablet'
       model: 'WING'
 
+    - regex: 'LM-T605'
+      model: 'G Pad 5 10.1" FHD'
+      device: 'tablet'
     - regex: 'LGUK410'
       model: 'G Pad 7.0" LTE'
       device: 'tablet'
