feat(device) detect brand LG models: V20 (LG-H910), V10 (LG-H961S, LG-F600L, LG-F600K), Optimus L4 II (LG-E440), G3 Stylus (LG-D693n, LG-D693, LG-D693TR, LG-D690n), G Vista (LG-D690), G Pro Lite (LG-D686), F60 (LGMS395), AKA (LG-H788), G3 Cat. 6 (LG-F460S, LG-F460L, LG-F460K), X Cam (LG-F690L)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9728,6 +9728,8 @@ LG:
       model: 'G2 Mini'
     - regex: 'LG-D85[01258]|VS985|LGLS990'
       model: 'G3'
+    - regex: 'LG-D693n?|LG-D690n'
+      model: 'G3 Stylus'
     - regex: 'LG-D72[23568]'
       model: 'G3 Beat'
     - regex: 'LG-F460'
@@ -9756,7 +9758,7 @@ LG:
       model: 'G7 One'
     - regex: 'LGL23(?:[);/ ]|$)'
       model: 'G Flex'
-    - regex: 'LG-D680'
+    - regex: 'LG-D68[06]'
       model: 'G Pro Lite'
     - regex: 'LM-G820(N|QM[0127]|UMB)?'
       model: 'G8'
@@ -9770,6 +9772,10 @@ LG:
       model: 'Wine Smart H410'
     - regex: 'VS501|LM-X120'
       model: 'K20'
+    - regex: 'LGMS395'
+      model: 'F60'
+    - regex: 'LG-H788'
+      model: 'AKA'
     - regex: '(?:LG-)?H50[02]'
       model: 'Magna'
     - regex: 'LG-(?:X15[05]|X165g)'
@@ -9792,6 +9798,8 @@ LG:
       model: 'X500'
     - regex: '(?:LG-)?P500H'
       model: 'Optimus One'
+    - regex: 'LG-E440'
+      model: 'Optimus L4 II'
     - regex: '(L-05[DE])(?:[);/ ]|$)'
       model: 'Optimus it $1'
     - regex: 'LG-L160L(?:[);/ ]|$)'
@@ -9804,7 +9812,7 @@ LG:
       model: 'PRADA phone L-02D'
     - regex: 'L-07C'
       model: 'Optimus Bright L-07C'
-    - regex: '(?:LG-?)?(?:F800[SKL]?|H990|US996|V34|LS997)(?:[);/ ]|$)'
+    - regex: '(?:LG-?)?(?:F800[SKL]?|H990|H910(?:PR)?|US996|V34|LS997)(?:[);/ ]|$)'
       model: 'V20'
     - regex: 'LM-Q710(?:\(FGN\)|[\.]?FGN)'
       model: 'Q Stylus Plus'
@@ -9868,7 +9876,7 @@ LG:
       model: 'Solo LTE'
     - regex: 'LM-X210K'
       model: 'X2'
-    - regex: 'LG-K580'
+    - regex: 'LG-(?:K580|F690L)'
       model: 'X Cam'
     - regex: 'LG-(?:SP320|M327)'
       model: 'X Charge'
@@ -9946,7 +9954,7 @@ LG:
       model: 'Q92'
     - regex: 'LM-Q927L'
       model: 'Q9 One'
-    - regex: '(?:LG-)?(?:RS987|H90[01]|H96[02128]|VS990)'
+    - regex: '(?:LG-)?(?:RS987|H90[01]|H96[02128]|VS990|F600[LK])'
       model: 'V10'
     - regex: 'LG-(?:X240|M200)'
       model: 'K8 (2017)'
@@ -10048,7 +10056,7 @@ LG:
       model: 'Rebel 4'
     - regex: 'VS876'
       model: 'Lucid 3'
-    - regex: 'VS880(PP)?'
+    - regex: 'VS880(PP)?|LG-D690'
       model: 'G Vista'
     - regex: 'VS820'
       model: 'Lancet'
