--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -7328,7 +7328,7 @@
 -
   user_agent: 'Mozilla/5.0 (iPhone; CPU iPhone OS 13_5_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 [FBAN/FBIOS;FBDV/iPad7,11;FBMD/iPad;FBSN/iOS;FBSV/13.5.1;FBSS/2;FBID/tablet;FBLC/en_US;FBOP/5]'
   os:
-    name: iOS
+    name: iPadOS
     version: 13.5.1
     platform: ""
   client:
@@ -7344,7 +7344,7 @@
 -
   user_agent: Mozilla/5.0 (iPad; CPU OS 13_5_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 Instagram 148.0.0.26.120 (iPad7,3; iOS 13_5_1; en_US; en-US; scale=2.00; 750x1334; 226453516)
   os:
-    name: iOS
+    name: iPadOS
     version: 13.5.1
     platform: ""
   client:
