Adds detection for iPadOS operating system (#6624)

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1869,6 +1869,34 @@
     version: ""
     platform: x64
 -
+  user_agent: com.google.GoogleMobile/99.0 iPad/13.4 hw/iPad7_5
+  os:
+    name: iPadOS
+    short_name: IPA
+    version: "13.4"
+    platform: ""
+-
+  user_agent: Mozilla/5.0 (iPad; CPU OS 14_2_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.1.1 Mobile/15E148 Safari/604.1
+  os:
+    name: iPadOS
+    short_name: IPA
+    version: 14.2.2
+    platform: ""
+-
+  user_agent: Microsoft Office Word/2.44.1211 (iOS/14.0; Tablet; es-MX; AppStore; Apple/iPad11,6)
+  os:
+    name: iPadOS
+    short_name: IPA
+    version: "14.0"
+    platform: ""
+-
+  user_agent: 'LightSpeed [FBAN/MessengerLiteForiOS;FBAV/270.1.0.54.119;FBBV/225524353;FBDV/iPad7,5;FBMD/iPad;FBSN/iOS;FBSV/13.5.1;FBSS/2;FBCR/;FBID/tablet;FBLC/es_ES;FBOP/0]'
+  os:
+    name: iPadOS
+    short_name: IPA
+    version: 13.5.1
+    platform: ""
+-
   user_agent: '[FBAN/FB4A;FBAV/72.0.0.22.69;FBBV/27550279;FBDM/{density=2.0,width=720,height=1280};FBLC/pt_BR;FBCR/Vivo;FBMF/Android;FBBD/Android;FBPN/com.facebook.katana;FBDV/J7 Prime;FBSV/6.1;FBOP/1;FBCA/armeabi-v7a:armeabi;]'
   os:
     name: Android
