--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -417,6 +417,25 @@
   version: '$1'
 
 ##########
+# iPadOS (https://www.apple.com/ipados/)
+##########
+- regex: 'FBMD/iPad;.*FBSV/ ?(1[345]).(\d+[\.\d]*);'
+  name: 'iPadOS'
+  version: '$1.$2'
+
+- regex: 'iPad/(1[345]).(\d+[\.\d]*)'
+  name: 'iPadOS'
+  version: '$1.$2'
+
+- regex: 'iPad.+CPU OS ((1[345])+(?:[_\.]\d+)*)'
+  name: 'iPadOS'
+  version: '$1'
+
+- regex: 'iOS/(1[345]).(\d+[\.\d]*).+Apple/iPad'
+  name: 'iPadOS'
+  version: '$1.$2'
+
+##########
 # iOS
 ##########
 - regex: 'iPad/([89]|1[012]).(\d+[\.\d]*)'
