feat(device) detect brand LG models: g6 (LG-LS993), X Charge (LG-M322), Class (LG-F620K), G3 (LG-D851), G Stylo (LG-H635)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9750,7 +9750,7 @@ LG:
       model: 'G5'
     - regex: 'LG-H84[05]'
       model: 'G5 SE'
-    - regex: 'VS988|LG-H87(?:[01](?:DS|[SI]|AR)?|[23])|LG-?US997|LGM-G600[SL]|LG-AS993'
+    - regex: 'VS988|LG-H87(?:[01](?:DS|[SI]|AR)?|[23])|LG-?US997|LGM-G600[SL]|LG-[AL]S993'
       model: 'G6'
     - regex: 'LM-Q850'
       model: 'G7 Fit'
@@ -9796,6 +9796,8 @@ LG:
       model: 'X400'
     - regex: 'LGM-X320[SKL]?(?:[);/ ]|$)'
       model: 'X500'
+    - regex: 'LG-F620K'
+      model: 'Class'
     - regex: '(?:LG-)?P500H'
       model: 'Optimus One'
     - regex: 'LG-E440'
@@ -9848,7 +9850,7 @@ LG:
       model: 'Stylo 2 Plus'
     - regex: 'L-41A(?:[);/ ]|$)'
       model: 'Style 3'
-    - regex: 'LG-?(?:MS631)(?:[);/ ]|$)'
+    - regex: 'LG-?(?:MS631|H635)(?:[);/ ]|$)'
       model: 'G Stylo'
     - regex: 'LG-?(?:LS777|L84VL|M430)(?:[);/ ]|$)'
       model: 'Stylo 3'
@@ -9878,7 +9880,7 @@ LG:
       model: 'X2'
     - regex: 'LG-(?:K580|F690L)'
       model: 'X Cam'
-    - regex: 'LG-(?:SP320|M327)'
+    - regex: 'LG-(?:SP320|M32[27])'
       model: 'X Charge'
     - regex: 'LG-K200|LGLS676'
       model: 'X Style'
