feat(device) detect brand LG models: X Skin (LG-F740L), Stylus 2 (LG-F720S), X Venture (LG-H700), v20 (LG-H915), Q8 (LG-H970), V10 (LG-H960, LG-K428), Stylus 2 Plus (LG-K530, LG-K535), Stylo 2 Plus (LG-K550), Aristo (LG-M210), Harmony (LG-M257)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9822,15 +9822,17 @@ LG:
       model: 'Q Stylus'
     - regex: 'LG-M400'
       model: 'Stylus 3'
-    - regex: 'LG-K520'
+    - regex: 'LG-(?:K520|F720S)'
       model: 'Stylus 2'
+    - regex: 'LG-(?:K53[05])'
+      model: 'Stylus 2 Plus'
     - regex: 'LM-Q[67]10\.FG(?:[);/ ]|$)'
       model: 'Q7'
     - regex: 'LM-(Q725[KL]|Q610.FGN)(?:[);/ ]|$)'
       model: 'Q7+'
     - regex: 'LM-Q815[SL](?:[);/ ]|$)'
       model: 'Q8+'
-    - regex: 'LGM-X800[KL]'
+    - regex: 'LGM-X800[KL]|LG-H970'
       model: 'Q8'
     - regex: 'LM-Q925[LKS](?:[);/ ]|$)'
       model: 'Q9'
@@ -9846,7 +9848,7 @@ LG:
       model: 'Stylo 2'
     - regex: 'VS835(?:[);/ ]|$)'
       model: 'Stylo 2 V'
-    - regex: 'LGMS550'
+    - regex: 'LG-?(?:MS550|K550)'
       model: 'Stylo 2 Plus'
     - regex: 'L-41A(?:[);/ ]|$)'
       model: 'Style 3'
@@ -9884,9 +9886,11 @@ LG:
       model: 'X Charge'
     - regex: 'LG-K200|LGLS676'
       model: 'X Style'
+    - regex: 'LG-F740L'
+      model: 'X Skin'
     - regex: 'LG-K500'
       model: 'X Screen'
-    - regex: 'LG-M710'
+    - regex: 'LG-(?:M710|H700)'
       model: 'X Venture'
     - regex: 'LM-X510WM'
       model: 'X Power 3'
@@ -9940,7 +9944,7 @@ LG:
       model: 'X6'
     - regex: 'LM-X625N'
       model: 'X6 (2019)'
-    - regex: 'LGMS210'
+    - regex: 'LG-(?:MS?210)'
       model: 'Aristo'
     - regex: 'LM-X210[G]?'
       model: 'Aristo 2'
@@ -9956,7 +9960,7 @@ LG:
       model: 'Q92'
     - regex: 'LM-Q927L'
       model: 'Q9 One'
-    - regex: '(?:LG-)?(?:RS987|H90[01]|H96[02128]|VS990|F600[LK])'
+    - regex: '(?:LG-)?(?:RS987|H90[01]|H96[02128]|VS990|F600[LK]|K428)'
       model: 'V10'
     - regex: 'LG-(?:X240|M200)'
       model: 'K8 (2017)'
@@ -10032,6 +10036,8 @@ LG:
       model: 'W30'
     - regex: 'LGV36(?:[);/ ]|$)'
       model: 'it'
+    - regex: 'LG-M257(?:[);/ ]|$)'
+      model: 'Harmony'
     - regex: '(?:LG-?)?(?:K220|LS755)'
       model: 'X Power'
     - regex: '(?:LG-?)?M320'
