feat(device) detect brand LG models: G Pad F 7.0" (LG-V400), G Pad 7.0" LTE (LG-V410), G Pad 8.0 (LG-V480), G Pad F 8.0" (LG-V495, LG-V496), G Pad II 8.0" (LG-V497), G3 (LGL24), Optimus L7 II (LG-P710, LG-P715), Optimus F5 (LG-P875, LG-P875h), Optimus F6 (LGMS500)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9726,7 +9726,7 @@ LG:
       model: 'G2'
     - regex: 'LG-D6(?:18|20)'
       model: 'G2 Mini'
-    - regex: 'LG-D85[012568]|VS985|LGLS990'
+    - regex: 'LG-D85[012568]|VS985|LGLS990|LGL24(?:[);/ ]|$)'
       model: 'G3'
     - regex: 'LG-D693n?|LG-D690n'
       model: 'G3 Stylus'
@@ -9802,12 +9802,16 @@ LG:
       model: 'Optimus One'
     - regex: 'LG-E440'
       model: 'Optimus L4 II'
+    - regex: 'LG-P875'
+      model: 'Optimus F5'
+    - regex: 'LGMS500'
+      model: 'Optimus F6'
     - regex: '(L-05[DE])(?:[);/ ]|$)'
       model: 'Optimus it $1'
     - regex: 'LG-L160L(?:[);/ ]|$)'
       model: 'Optimus LTE 2'
-    - regex: 'P713(?:[);/ ]|$)'
-      model: 'Optimus L7II'
+    - regex: '(?:P713|LG-P71[05])(?:[);/ ]|$)'
+      model: 'Optimus L7 II'
     - regex: 'L-01D(?:[);/ ]|$)'
       model: 'Optimus LTE L-01D'
     - regex: 'L-02D(?:[);/ ]|$)'
@@ -10079,19 +10083,22 @@ LG:
     - regex: 'LM-T605'
       model: 'G Pad 5 10.1" FHD'
       device: 'tablet'
-    - regex: 'LGUK410'
+    - regex: 'LG-?(?:UK|V)410'
       model: 'G Pad 7.0" LTE'
       device: 'tablet'
     - regex: 'LG-V533'
       model: 'G Pad IV 8.0"'
       device: 'tablet'
-    - regex: 'LGLK430'
+    - regex: 'LG-?(?:LK430|V400)'
       model: 'G Pad F 7.0"'
       device: 'tablet'
     - regex: 'LGLK430'
       model: 'G Pad F 7.0"'
       device: 'tablet'
-    - regex: 'LG-V490'
+    - regex: 'LG-V49[56]'
+      model: 'G Pad F 8.0"'
+      device: 'tablet'
+    - regex: 'LG-V4[89]0'
       model: 'G Pad 8.0'
       device: 'tablet'
     - regex: 'LGT01'
@@ -10102,6 +10109,9 @@ LG:
       device: 'tablet'
     - regex: 'LG-V700'
       model: 'G Pad 10.1'
+      device: 'tablet'
+    - regex: 'LG-V497'
+      model: 'G Pad II 8.0"'
       device: 'tablet'
     - regex: 'LG-V935'
       model: 'G Pad II 10.1'
