--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -8307,3 +8307,107 @@
     model: G Pad 5 10.1" FHD
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: 'Mozilla/5.0 (Linux; Android 5.0.2; LG-V400 Build/LRX22G) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/37.0.0.0 Safari/537.36 [FB_IAB/FB4A;FBAV/173.0.0.62.99;]'
+  os:
+    name: Android
+    version: 5.0.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 173.0.0.62.99
+  device:
+    type: tablet
+    brand: LG
+    model: G Pad F 7.0"
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.0.2; LG-V410 Build/LRX22G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/45.0.2454.84 Safari/537.36
+  os:
+    name: Android
+    version: 5.0.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 45.0.2454.84
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: LG
+    model: G Pad 7.0" LTE
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.0.2; LG-V480 Build/LRX22G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/45.0.2454.94 Safari/537.36
+  os:
+    name: Android
+    version: 5.0.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 45.0.2454.94
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: LG
+    model: G Pad 8.0
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.0.2; LG-V495 Build/LRX22G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/65.0.3325.109 Safari/537.36
+  os:
+    name: Android
+    version: 5.0.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 65.0.3325.109
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: LG
+    model: G Pad F 8.0"
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.0.2; LG-V496 Build/LRX22G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.68 Safari/537.36
+  os:
+    name: Android
+    version: 5.0.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 54.0.2840.68
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: LG
+    model: G Pad F 8.0"
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: 'Mozilla/5.0 (Linux; Android 5.0.2; LG-V497 Build/LRX22G; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/63.0.3239.111 Safari/537.36 [FB_IAB/FB4A;FBAV/155.0.0.36.96;]'
+  os:
+    name: Android
+    version: 5.0.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 155.0.0.36.96
+  device:
+    type: tablet
+    brand: LG
+    model: G Pad II 8.0"
+  os_family: Android
+  browser_family: Unknown
